stateDiagram-v2
  [*] --> Editing
  state Editing
  state Saving
  note right of Saving
    entry / SaveDraft
  end note
  state Saved
  Editing --> Saving: SaveClicked [valid title]
  Editing --> Editing: SaveClicked [missing title]
  Saving --> Saved: DraftSaveCompleted
  Saving --> Editing: DraftSaveFailed
